# coq-list-solver

./: README.md
AProVE/: README.md  output.html  rewrite_system.trs
SMT Strings Theory/: VST_experiment_1.smt2  VST_experiment_2.smt2  VST_experiment_3.smt2  VST_experiment_4.smt2  VST_experiment_5.smt2  app_cons_not_nil.smt2  app_eq_nil.smt2  app_singleton.smt2  concat_associativity.smt2  ex_suff_of_take.smt2  left_app_cancel.smt2  list_app_equal_tail_cancel.smt2  list_concat_fix_tail.smt2  nth_l_app_eq.smt2  own_test_4.smt2  own_test_5.smt2  own_test_6.smt2  own_test_7.smt2  own_test_8.smt2  rev_rev.smt2  rev_unit.smt2  right_app_cancel.smt2  run.sh  sublist_lem.smt2  suffix_snoc_inv_1.smt2  update_update.smt2
solver/: .merlin  Makefile  README.md  _CoqProject  coq-list-solver.opam
solver/benchmarks/: README.md  Running_benchmarks_VST_solver.v  Running_benchmarks_own_solver.v  benchmarks.v  benchmarks_VST_solver.v  benchmarks_own_solver.v
solver/cc_src/: META.mycc-plugin  dune  g_mycc.mlg  mycc_plugin.mlpack  myccalgo.ml  myccalgo.mli  myccproof.ml  myccproof.mli  mycctac.ml  mycctac.mli  top_printers.ml  top_printers.mli
solver/solvers/: Loader.v  README.md  build.v  definitions.v  length_normal_form.v  list_normal_form.v  list_solver.v
