opam-version: "2.0"
name: "coq-list-solver"
version: "dev"
synopsis: "A list solver for Coq"
maintainer: "Jeroen Kool"
depends: [
  "coq-iris" { (>= "dev.2023-04-12.0.958aad09" & <= "dev.2023-04-12.0.958aad09" ) | = "dev" | = "4.1.0" }
  "coq" { >= "8.16.1" & <= "8.16.1" }
  "coqide" { >= "8.16.1" & <= "8.16.1" }
  "merlin"
]
build: [
  [make]
]
install: [make "install"]
